--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kami"
-  avatar           : "go!!!.jpg"
+  avatar           : "go.png"
   bio              : "A student major in Computer Science and Technology in Xiamen University"
   location         : "Xiamen,China"
   employer         :
