--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kami"
+  name             : "Chengshuo Zheng"
   avatar           : "go.png"
-  bio              : "A student studying Computer Science and Technology at Xiamen University."
-  location         : #"Xiamen,China"
-  employer         : "Xiamen University"
+  bio              : "A student studying Software Engineering at Peking University."
+  location         : "Beijing,China"
+  employer         : "Peking University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : "kamiqwer000@gmail.com"
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : #"http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0009-0001-9782-6268"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
